# AgenticAI

./: README.md
Calculator/: README.md  agentic.py  pyproject.toml
